# star

./: .gitignore  BATTLE_LOG_ENHANCEMENT_REPORT.md  Design.md  Log.md  Makefile  README.md  ai_controller.py  auto_test.py  batch_run.sh  calculate_elo.py  damage_display_examples.py  game.py  generate_tournament.py  multi_launcher.sh  performance_profiler.py  pyproject.toml  run_agent.sh  run_agent_generic.sh  run_ai_play.py  run_env.sh  run_game.py  run_headless_env.sh  run_optimized_agent.sh  test_battle_log_enhancements.py  test_damage_display.py  test_new_rules.py  test_optimization_comparison.py  test_settlement_fix.py  test_settlement_report.py  tournament.sh  tournament_launcher.py  tournament_schedule.json
archive_v1.0/: Architecture.md  mvp.py  run_game.py
controller/: army.py  unit.py
docs/: Arch.md  Arch_ch.md  CACHE_README.md  COMPARISON.md  LLM_INTEGRATION_SUMMARY.md  LLM_SYSTEM_INTEGRATION.md  README.md  README_ch.md  detailed_design.md  llm_protocol.py
entity/: combat_system.py  movement_controller.py  unit.py  unit_manager.py  visibility_system.py
examples/: README.md  data_components.py  demo_cache.py  demo_ecs.py  demo_ecs_game.py  demo_ecs_query.py  demo_event.py  demo_game_engine.py  demo_pygbag_launcher.py  demo_render_engine.py  demo_scene.py  llm_websocket_demo.py
framework/: README.md  __init__.py
framework_v2/: __init__.py
game/: README.md  agents.py  combat.py  game.py  game_system.py  metric.py  movement.py  planner.py  visibility.py
go_game/: ECS_REFACTOR_SUMMARY.md  FINAL_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT.md  ai.py  (+9 more)
(+766 files in other folders)
